--- a/en/p/planter box.775381.wikitext
+++ b/en/p/planter box.775381.wikitext
@@ -7,4 +7,9 @@
 #* '''1897,''' Hon. Stuart Brown, “Indian Corn—Its Cultivation and Uses”, read before the [[w:Sangamon County, Illinois|Sangamon County]] Farmers Institute, in Charles F. Mills (ed.), ''Annual Report, Illinois Farmer’s Institute, with Reports of County Farmers’ Institutes, for the Year 1897'', Phillips Bros., [http://books.google.com/books?id=pX00AAAAMAAJ&amp;pg=PA115&amp;dq=%22planter+box%22 page 115],
 #*: Cross fertilization <!-- [sic] written as two words --> has generally given greater yields. It is done by planting with one variety in one '''planter box''' and another variety in the other.
 
+====Translations====
+{{trans-top|flower box}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[el:planter box]]
