--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -37,7 +37,7 @@
 * {{trreq|ko}}
 * {{trreq|pl}}
 * {{trreq|pt}}
-* {{trreq|ru}}
+* Russian: {{t|ru|в курсе|sc=Cyrl}}
 * {{trreq|sh}}
 * {{trreq|es}}
 * {{trreq|th}}
