--- a/en/m/millstream.720300.wikitext
+++ b/en/m/millstream.720300.wikitext
@@ -1,9 +1,17 @@
 ==English==
 
+===Etymology===
+{{compound|mill|stream}}
+
 ===Noun===
 {{en-noun}}
 
-# The water that runs through a [[millrace]] to power a [[mill]]
+# The water that runs through a [[millrace]] to power a [[mill]].
+
+====Translations====
+{{trans-top|water that runs through a millrace}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Anagrams===
 * {{alphagram|aeillmmrst}}
