t+eo:[[KD]] ([[WT:EDIT|Assisted]]) <CD#12705409>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -45,6 +45,7 @@
 * Chinese:
 *: Mandarin: {{t-|cmn|CD|tr=sìdì|sc=Hani}},  {{t-|cmn|光盤|sc=Hani}},  {{t-|cmn|光盘|tr=guāngpán|sc=Hani}},  {{t-|cmn|光碟|tr=guāngdié|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
+* Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
 {{trans-mid}}
 * French: {{t+|fr|CD|m}}
