--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -46,17 +46,17 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{ja-noun|k|hira=つき|rom=tsuki}}
 
 # the [[moon]]
-#: [[日本]][[では]][[月]][[に]][[うさぎ]][[が]][[住む|住ん]][[だ|で]][[いる]][[と]][[いう]][[お話]][[が]][[ある|あり]][[ます]]。
-#:: にほんでは'''つき'''にうさぎがすんでいるというおはなしがあります。
+#: {{l|ja|日本}}{{l|ja|では}}{{l|ja|月}}{{l|ja|に}}{{l|ja|うさぎ}}{{l|ja|が}}{{l|ja|住む|住ん}}{{l|ja|だ|で}}{{l|ja|いる}}{{l|ja|と}}{{l|ja|いう}}{{l|ja|お話}}{{l|ja|が}}{{l|ja|ある|あり}}{{l|ja|ます。}}
+#:: {{l|ja|にほんでは}}'''{{l|ja|つき}}'''{{l|ja|にうさぎがすんでいるというおはなしがあります。}}
 #:: ''Nihon de wa '''tsuki''' ni usagi ga sunde iru toiu ohanashi ga arimasu.''
 #::: In Japan, there is a fairy-tale that rabbits live on the '''moon'''.
-#: '''月'''[[は]][[地球]][[の]][[唯一]][[の]][[衛星]][[です]]。
-#:: '''つき'''はちきゅうのゆいいつのえいせいです。
+#: '''{{l|ja|月}}'''{{l|ja|は}}{{l|ja|地球}}{{l|ja|の}}{{l|ja|唯一}}{{l|ja|の}}{{l|ja|衛星}}{{l|ja|です。}}
+#:: '''{{l|ja|つき'''はちきゅうのゆいいつのえいせいです。}}
 #:: '''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''
 #::: '''Moon''' is the only one [[satellite]] of the [[Earth]].
 # a [[month]]
-#: '''月'''[[に]][[一度]]、[[旅行]][[に]][[出かける|出かけ]][[ます]]。
-#:: '''つき'''にいちど、りょこうにでかけます。
+#: '''{{l|ja|月}}'''{{l|ja|に}}{{l|ja|一度}}{{l|ja|、}}{{l|ja|旅行}}{{l|ja|に}}{{l|ja|出かける|出かけ}}{{l|ja|ます。}}
+#:: '''{{l|ja|つき{{l|ja|'''にいちど、りょこうにでかけます。}}
 #:: '''''Tsuki''' ni ichido, ryokō ni dekake masu.''
 #::: I go for a trip once a '''month'''.
 
@@ -67,24 +67,24 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ====Derived terms====
 
-* [[月夜]] (tsukuyo)
-* [[月読]], [[月夜見]] (tsukuyomi)
+* {{l|ja|月夜}} (tsukuyo)
+* {{l|ja|月読}}, {{l|ja|月夜見}} (tsukuyomi)
 
 ===See also===
 {{top2}}
-* [[一月]] ichigatsu - [[January]]
-* [[二月]] nigatsu - [[February]]
-* [[三月]] sangatsu - [[March]]
-* [[四月]] shigatsu - [[April]]
-* [[五月]] gogatsu - [[May]]
-* [[六月]] rokugatsu - [[June]]
+* {{l|ja|一月}} ichigatsu - [[January]]
+* {{l|ja|二月}} nigatsu - [[February]]
+* {{l|ja|三月}} sangatsu - [[March]]
+* {{l|ja|四月}} shigatsu - [[April]]
+* {{l|ja|五月}} gogatsu - [[May]]
+* {{l|ja|六月}} rokugatsu - [[June]]
 {{mid2}}
-* [[七月]] shichigatsu - [[July]]
-* [[八月]] hachigatsu - [[August]]
-* [[九月]] kugatsu - [[September]]
-* [[十月]] jūgatsu - [[October]]
-* [[十一月]] jūichigatsu - [[November]]
-* [[十二月]] jūnigatsu  - [[December]]
+* {{l|ja|七月}} shichigatsu - [[July]]
+* {{l|ja|八月}} hachigatsu - [[August]]
+* {{l|ja|九月}} kugatsu - [[September]]
+* {{l|ja|十月}} jūgatsu - [[October]]
+* {{l|ja|十一月}} jūichigatsu - [[November]]
+* {{l|ja|十二月}} jūnigatsu  - [[December]]
 {{bottom}}
 
 ===Kanji===
@@ -94,44 +94,45 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 # a [[month]] (on the lunar calendar)
 # every month
 # [[menstruation]] that take place every month
-# (only in Japanese) abbreviation for [[月曜日]]([[Monday]])
+# (only in Japanese) abbreviation for {{l|ja|月曜日}} ([[Monday]])
 
 ====Readings====
-* {{ja-readings|on=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')|goon=[[ごち]] (gochi)|kun=[[つき]] (''tsuki''), [[げつ]](getsu)|nanori=[[ずき]] (''zuki''), [[す]] (''su''), [[が]]っ (''ga''), [[おと]] (''oto''), [[もり]] (''mori'')}}
+* {{ja-readings|on={{l|ja|げつ}} (''getsu''), {{l|ja|がつ}} (''gatsu'')|goon={{l|ja|ごち}} (gochi)|kun={{l|ja|つき}} (''tsuki''), {{l|ja|げつ}} (getsu)|nanori={{l|ja|ずき}} (''zuki''), {{l|ja|す}} (''su''), {{l|ja|が}}{{l|ja|っ}} (''ga''), {{l|ja|おと}} (''oto''), {{l|ja|もり}} (''mori'')}}
 
 ====Compounds====
 {{top3}}
-* [[月下氷人]] ([[げっかひょうじん]], [[gekkahyōjin]]): [[matchmaker]]
-* [[月影]] ([[つきかげ]], [[tsukikage]]): [[moonlight]]
-* [[月額]] ([[げつがく]], [[getsugaku]]): [[monthly]] [[amount]]
-* [[月刊]] ([[げっかん]], [[gekkan]]): [[monthly]] [[publication]]
-* [[月極]] ([[つきぎめ]], [[tsukigime]]): [[monthly]]
-* [[月経]] ([[げっけい]], [[gekkei]]): [[menstruation]]
-* [[月桂樹]] ([[げっけいじゅ]], [[gekkeiju]]): [[laurel]] [[tree]]
-* [[月光]] ([[げっこう]], [[gekkō]]): [[moonlight]]
-* [[月蝕]]、[[月食]] ([[げっしょく]], [[gesshoku]]): [[lunar eclipse]]
+* {{l|ja|月下氷人}} ({{l|ja|げっかひょうじん}}, [[gekkahyōjin]]): [[matchmaker]]
+* {{l|ja|月影}} ({{l|ja|つきかげ}}, [[tsukikage]]): [[moonlight]]
+* {{l|ja|月額}} ({{l|ja|げつがく}}, [[getsugaku]]): [[monthly]] [[amount]]
+* {{l|ja|月刊}} ({{l|ja|げっかん}}, [[gekkan]]): [[monthly]] [[publication]]
+* {{l|ja|月極}} ({{l|ja|つきぎめ}}, [[tsukigime]]): [[monthly]]
+* {{l|ja|月経}} ({{l|ja|げっけい}}, [[gekkei]]): [[menstruation]]
+* {{l|ja|月桂樹}} ({{l|ja|げっけいじゅ}}, [[gekkeiju]]): [[laurel]] [[tree]]
+* {{l|ja|月光}} ({{l|ja|げっこう}}, [[gekkō]]): [[moonlight]]
+* {{l|ja|月蝕}}{{l|ja|、}}{{l|ja|月食}} ({{l|ja|げっしょく}}, [[gesshoku]]): [[lunar eclipse]]
 * {{l|ja|sc=Jpan|月卿|tr=げっけい, gekkei}}
 * {{l|ja|sc=Jpan|月次|tr=げつじ, getsuji}}
 {{mid3}}
-* [[月賦]] ([[げっぷ]], [[geppu]]): [[monthly]] [[payment]]
-* [[月末]]
-* [[月曜]]、[[月曜日]] ([[げつようび|げつよう(び)]], [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
-* [[月例]] ([[げつれい]], [[getsurei]]): [[monthly]]
-* [[月齢]] ([[げつれい]], [[getsurei]]):
-* [[月代]] ([[つきしろ]], [[tsukishiro]]):
-* [[月並み]] ([[つきなみ]], [[tsukinami]]):
+* {{l|ja|月賦}} ({{l|ja|げっぷ]], [[geppu]]): [[monthly]] [[payment]]
+* {{l|ja|月末}}
+* {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日{{l|ja| ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
+* {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
+* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]):
+* {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
+* {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]):
 * {{l|ja|sc=Jpan|月餅|tr=げっぺい, geppei}}
 * {{l|ja|sc=Jpan|月末|tr=げつまつ, getsumatsu}}
 * {{l|ja|sc=Jpan|月日|tr=つきひ, がっぴ, tsukihi, gappi}}
 * {{l|ja|sc=Jpan|月旦|tr=げったん, gettan}}
 {{mid3}}
-* [[有明の月]] ([[ありあけのつき]], [[ariake no tsuki]]):
-* [[日進月歩]] ([[にっしんげっぽ]], [[nisshingeppo]]): [[rapid]] [[advance]]
+* {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]):
+* {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
 * {{l|ja|sc=Jpan|日月|tr=じつげつ, jitsugetsu}}
-* [[新月]] ([[しんげつ]], [[shingetsu]]): [[new moon]]
-* [[半月]] ([[はんげつ]], [[hangetsu]]): [[half moon]]
-* [[毎月]] ([[まいげつ]], [[maigetsu]]): [[every]] [[month]]
-* [[満月]] ([[まんげつ]], [[mangetsu]]): [[full moon]]
+* {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
+* {{l|ja|半月}} ({{l|ja|はんげつ}}, [[hangetsu]]): [[half moon]]
+* {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
+* {{l|ja|凸月}} ({{l|ja|でこげつ}}, [[dekogetsu]]: [[gibbous moon]]
+* {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
 {{bottom}}
 
 ====Compounds====
