--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -115,7 +115,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{mid3}}
 * {{l|ja|月賦}} ({{l|ja|げっぷ}}, [[geppu]]): [[monthly]] [[payment]]
 * {{l|ja|月末}}
-* {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日{{l|ja| ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
+* {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
 * {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
 * {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]):
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
