t+th:[[การโฆษณา]] ([[WT:EDIT|Assisted]]) <advertisement#12708582>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -87,7 +87,7 @@
 * Swedish: {{t|sv|annons}}, {{t|sv|annonsering}}, {{t|sv|reklam}}
 * [[Tamil]]: {{t|ta|விளம்பரம்|xs=Tamil}}
 * [[Telugu]]: [[వ్యాపార ప్రకటన]]
-* {{trreq|th}}
+* Thai: {{t|th|การโฆษณา|tr=gaan kôhtsànaa|sc=Thai}}
 * Turkish: {{t+|tr|reklâm}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
 * Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}} ({{t-|vi|廣告|sc=Hani|xs=Vietnamese}}), {{t+|vi|giới thiệu|xs=Vietnamese}}
 * [[Volapük]]: [[noted]], [[reklam]], [[nunam]]
