--- a/en/a/accusement.34083.wikitext
+++ b/en/a/accusement.34083.wikitext
@@ -4,7 +4,7 @@
 {{etyl|fro}} {{term|acusement|lang=fro}}. See also {{term|accuse}}.
 
 ===Pronunciation===
-{{rfp}}
+{{rfp|lang=en}}
 
 ===Noun===
 {{en-noun}}
