--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -11,7 +11,7 @@
 # A person who steals, lies, cheats or does other dishonest or illegal things; a criminal.
 #* '''1973''' (November 17), President [[w:Richard Nixon|Richard Nixon]]:
 #*: ''People have got to know whether or not their President is a '''crook'''. Well, I'm not a '''crook'''. I've earned everything I've got.''<ref>[http://www.washingtonpost.com/wp-srv/national/longterm/watergate/articles/111873-1.htm Nixon Tells Editors, 'I'm Not a Crook'], November 18, 1973 (The Washington Post)</ref>
-# A [[shepard's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
+# A [[shepherd's crook]]; a [[staff]] with a semi-circular bend ("hook") at one end used by [[shepherd]]s.
 #* '''1970''', ''The New English Bible with the Apocrypha, Oxford Study Edition'', published 1976, Oxford University Press; ''Psalms'' 23-4, page 583:
 #*: Even though I walk through a / valley dark as death / I fear no evil, for thou art with me, / thy staff and thy '''crook''' are my / comfort.
 # A [[bend]].
@@ -84,7 +84,7 @@
 * Other Australian Usage to be sorted out
 *: to go crook at someone, something; to get angry
 *: to be crook at/about someone, something; to be annoyed, upset
-*: crook as Rookwood. To be very sick (Rookwood is the main cemetry of Sydney)
+*: crook as Rookwood. To be very sick (Rookwood is the main cemetery of Sydney)
 
 [[Category:Crime]]
 
