--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -1,10 +1,22 @@
 ==English==
 
+===Alternative forms===
+* {{l|en|ingraft}}
+* {{l|en|engraff}} {{i|obsolete}}
+
+===Etymology===
+From earlier {{term|ingraft}}, from {{prefix|in|graft}}.
+
 ===Verb===
 {{en-verb}}
 
-# To [[graft]] onto a plant
+# To insert, as a [[scion]] of one tree or plant into another, for the purpose of [[propagation]]; [[graft]] onto a plant
 # To [[fix]] firmly into place
+
+===Adjective===
+{{en-adj}}
+
+# {{rare}} [[engrafted|Engrafted]].
 
 [[et:engraft]]
 [[fr:engraft]]
