--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -1,8 +1,13 @@
 ==English==
+
+===Etymology===
+{{suffix|unfriendly|ness}}
+
 ===Noun===
 {{en-noun|es|-}}
-#{{uncountable}} The state of being [[unfriendly]].
-#{{countable}} An unfriendly act.
+
+# {{uncountable}} The state of being [[unfriendly]].
+# {{countable}} An unfriendly act.
 
 [[et:unfriendliness]]
 [[te:unfriendliness]]
