--- a/en/r/resource energy.776622.wikitext
+++ b/en/r/resource energy.776622.wikitext
@@ -1,10 +1,9 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[resource]] [[energy]]|resource energies}}
 
-# energy taken from a source which is depleted by extraction (e.g. fossil fuels).
-
+# Energy taken from a source which is depleted by extraction (e.g. fossil fuels).
 
 ===See also===
-*[[renewable energy]]
+* [[renewable energy]]
