--- a/en/v/vorticose.856047.wikitext
+++ b/en/v/vorticose.856047.wikitext
@@ -1,3 +1,8 @@
+==English==
+
+===Adjective===
+'''vorticose'''
+# Prone or inclined to spinning, rotating, or turning.
 ==Italian==
 
 ===Adjective===
