--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -8,7 +8,7 @@
 *: {{rhymes|ɑp}}
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|coppe|lang=enm}}, from {{etyl|ang}} *{{term||coppe|lang=ang}}, as in {{term|atorcoppe|ātorcoppe|spider|lang=ang}}, cognate with {{etyl|dum|-}} {{term|koppe|lang=dum}}, {{term|kobbe||spider|lang=dum}}. More at {{l|en|cobweb}}.
+From {{etyl|enm}} {{term|coppe|lang=enm}}, from {{etyl|ang}} *{{term||coppe|lang=ang}}, as in {{term|atorcoppe|ātorcoppe|spider|lit=venom head|lang=ang}}, from {{etyl|ang}} {{term|copp||top, summit, head|lang=ang}}, from {{proto|Germanic|kuppaz|vault, round vessel, head|lang=en}}, from {{proto|Indo-European|gup-||gu-|to bend, curve|lang=en}}. Cognate with {{etyl|dum|-}} {{term|koppe|lang=dum}}, {{term|kobbe||spider|lang=dum}}. More at {{l|en|cobweb}}.
 
 ====Noun====
 {{en-noun}}
