--- a/en/v/vorticose.856047.wikitext
+++ b/en/v/vorticose.856047.wikitext
@@ -1,8 +1,11 @@
 ==English==
 
 ===Adjective===
-'''vorticose'''
-# Prone or inclined to spinning, rotating, or turning.
+{{en-adj}}
+
+# [[vortical]]
+
+----
 ==Italian==
 
 ===Adjective===
