t+myv:[[ур]] ([[WT:EDIT|Assisted]]) <squirrel#12726412>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -41,6 +41,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Danish: {{t+|da|egern|n}}
 * [[Dolgan]]: {{tø|dlg|тииҥ|tr=tiiñ|sc=Cyrl}}
 * Dutch: {{t+|nl|eekhoorn|m}}
+* [[Erzya]]: {{tø|myv|ур|tr=ur}}
 * Esperanto: {{t-|eo|sciuro|xs=Esperanto}}
 * Estonian: {{t+|et|orav}}
 * Faroese: {{t-|fo|íkorni|m|xs=Faroese}}
