--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -129,7 +129,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugi-ni}}
 {{trans-mid}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
-* Latin: {{t|la|deinde}}
+* Latin: {{t|la|deinde}}, {{t|la|exinde}}
 * Malay: [[selepas itu]]
 * Navajo: {{tø|nv|índa}}
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}
