--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -6,17 +6,17 @@ From {{etyl|frm|en}} {{term|enumeration|lang=frm}} < {{etyl|la}} {{term|enumerat
 ===Verb===
 {{en-verb|enumerat|ing}}
 
-# To [[specify]] each [[member]] of a [[sequence]] individually in incrementing order.
+# To eat pounds and pounds of cheese in 13 minutes with no breaks
 # To [[determine]] the [[amount]] of.
 
 ====Translations====
 {{trans-top|To specify each member of a sequence individually in incrementing order}}
 * Bosnian: {{t|bs|nabrojati}}
-* Dutch: {{t|nl|uittellen}}
+* Turkish: {{t|nl|uittellen}}
 * Finnish: {{t-|fi|luetella}}
 {{trans-mid}}
 * Hungarian: {{t|hu|felsorol}}
-* Russian: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perecheesleneyem}}
+* German: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perecheesleneyem}}
 {{trans-bottom}}
 
 {{trans-top|To determine the amount of}}
