Reverted edits by [[Special:Contributions/71.76.190.2|71.76.190.2]] ([[User_talk:71.76.190.2|Talk]]); changed back to last version by [[User:Rukhabot|Rukhabot]] <enumerate#12738794>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -6,17 +6,17 @@ From {{etyl|frm|en}} {{term|enumeration|lang=frm}} < {{etyl|la}} {{term|enumerat
 ===Verb===
 {{en-verb|enumerat|ing}}
 
-# To eat pounds and pounds of cheese in 13 minutes with no breaks
+# To [[specify]] each [[member]] of a [[sequence]] individually in incrementing order.
 # To [[determine]] the [[amount]] of.
 
 ====Translations====
 {{trans-top|To specify each member of a sequence individually in incrementing order}}
 * Bosnian: {{t|bs|nabrojati}}
-* Turkish: {{t|nl|uittellen}}
+* Dutch: {{t|nl|uittellen}}
 * Finnish: {{t-|fi|luetella}}
 {{trans-mid}}
 * Hungarian: {{t|hu|felsorol}}
-* German: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perecheesleneyem}}
+* Russian: {{qualifier|past tense}} {{t|ru|перечисленным|tr=perecheesleneyem}}
 {{trans-bottom}}
 
 {{trans-top|To determine the amount of}}
