--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
-gjjhgfjghjghjhgurthjnbjngjng;ngjfgbhkjkgbkfgbgbhgbfdgbfggjgbfbghbghfghgbhgbfhgbhgbgbhgbgbhgbgbkhgbgbhbhgbhgbgjgbjbfgfghfkhgfhhbhfbvfdhgdlgbfdnbjglgfgbfljgbojbgbjfbjhjhfdhgljdhfushriuwirhpwuirhewuierbnvvbvnnbvzkdnfpjioeuhrehbgnxfvkjndfjnrrptjpoijrnrfjdnfkljdsnvghnkdlsfvsbdfncbfkmbk mhg nkhvjxoeiuhawonroivfuy784y54354340y600 6by53045 45vt bnrjfnemtvhiyomyuhbioeuhvtoyrguioyh6yhthuiy6507843ytmnhbtby
+===Etymology===
+From {{etyl|frm|en}} {{term|enumeration|lang=frm}} < {{etyl|la}} {{term|enumerationem||a counting up|ang=la}}.
 
 ===Verb===
 {{en-verb|enumerat|ing}}
