--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -46,6 +46,19 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 
 ----
 
+==Danish==
+
+===Pronunciation===
+* {{IPA|/kvaː/|[kʰvæːˀ]|lang=da}}
+
+====Conjunction====
+{{infl|da|conjunction}}
+
+# [[as]], [[qua#English|qua]] {{gloss|in the capacity of}}
+# {{qualifier|as a preposition}} [[by virtue of]] {{gloss|because of}}
+
+----
+
 ==Dutch==
 
 ===Pronunciation===
