--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -121,7 +121,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
 * {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]):
 * {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei: "moon cake"
-* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu:
+* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu: "the end of the month"
 * {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi):
 * {{l|ja|月旦}} ({{l|ja|げったん}}, gettan):
 {{mid3}}
