Reverted edits by [[Special:Contributions/211.26.183.238|211.26.183.238]] ([[User_talk:211.26.183.238|Talk]]); changed back to last version by [[User:KassadBot|KassadBot]] <again#12750050>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -111,8 +111,8 @@
 * Sanskrit: {{t|sa|पुनः|tr=punaḥ|sc=Deva}}
 * [[Scottish Gaelic]]: {{t-|gd|a-rithist|xs=Scottish Gaelic}}, {{t|gd|às ùr}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|опет}}, {{t|sh|поново}}, {{t|sh|снова}}
-*: Roman: {{t|sh|opet}}, {{t|sh|ponovo}}, {{t|sh|snova}}
+*: Cyrillic: {{t|sh|опет}}, {{t|sh|поново}}, {{t|sh|обнова}}, {{t|sh|снова}}, {{t|sh|однова}}
+*: Roman: {{t|sh|opet}}, {{t|sh|ponovo}}, {{t|sh|obnova}}, {{t|sh|snova}}, {{t|sh|odnova}}
 * [[Sicilian]]: {{t+|scn|arreri|xs=Sicilian}},  {{t+|scn|arrè|xs=Sicilian}}
 * Slovak: {{t|sk|opäť}}, {{t|sk|zasa}}, {{t|sk|znova}}, {{t|sk|znovu}}
 * Slovene: {{t|sl|spet}}, {{t|sl|ponovno}}, {{t|sl|znova}}
