--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -34,6 +34,8 @@ Originally meaning an assembly, that handled political and court issues. Later a
 # That which matters; the [[crux]].
 #: ''That's the '''thing''': we don't know where he went.''
 #: ''The '''thing''' is, I don't have any money.''
+# Used after a noun to refer dismissively to the situation surrounding the idea referred to by the noun.
+#: ''Oh yeah, I'm supposed to promote that vision '''thing'''.''
 
 ====Quotations====
 * '''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
