--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -34,12 +34,14 @@ Originally meaning an assembly, that handled political and court issues. Later a
 # That which matters; the [[crux]].
 #: ''That's the '''thing''': we don't know where he went.''
 #: ''The '''thing''' is, I don't have any money.''
-# Used after a noun to refer dismissively to the situation surrounding the idea referred to by the noun.
+# Used after a noun to refer dismissively to the situation surrounding the noun referent.
 #: ''Oh yeah, I'm supposed to promote that vision '''thing'''.''
 
 ====Quotations====
 * '''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
 *: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
+* '''1914''', O'Neill, Eugene Gladstone, ''[http://www.eoneill.com/texts/movie/contents.htm The Movie Man]'' [playscript]. 
+*: ''Don’t forget to have Gomez postpone that shooting '''thing'''.'' (in reference to the execution of Fernandez).
 
 ====Related terms====
 * ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus'']
