/* Noun */ {{non-gloss definition}} <thing#12758655>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -34,7 +34,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 # That which matters; the [[crux]].
 #: ''That's the '''thing''': we don't know where he went.''
 #: ''The '''thing''' is, I don't have any money.''
-# Used after a noun to refer dismissively to the situation surrounding the noun referent.
+# {{non-gloss definition|Used after a noun to refer dismissively to the situation surrounding the noun's referent.|lang=en}}
 #: ''Oh yeah, I'm supposed to promote that vision '''thing'''.''
 
 ====Quotations====
