--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -4,7 +4,7 @@
 ===Etymology===
 From {{etyl|enm}} {{term|ermine|lang=enm}}, {{term|ermin|lang=enm}}, {{term|ermyn|lang=enm}}, from {{etyl|fro}} {{term|ermin|lang=fro}}, {{term|ermine|lang=fro}}, {{term|hermine||ermine|lang=fro}}, of {{etyl|gem}} origin, continuing {{etyl|frk}} *{{term||harmo, *harmin-|ermine, stoat, weasel|lang=frk}}, from {{proto|Germanic|harmô|weasel|lang=en}}, from {{proto|Indo-European|ḱerǝm-|weasel|lang=en}}. Cognate with {{etyl|goh|-}} {{term|harmo||ermine, stoat, weasel|lang=goh}}, {{etyl|odt|-}} {{term|harm||weasel|lang=odt}}, {{etyl|ang|-}} {{term|hearma||fieldmouse, dormouse, weasel|lang=ang}}. Compare also {{etyl|de|-}} {{term|Hermelin||ermine|lang=de}}. More at {{l|en|ermelin}}.
 
-Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{term|Armenius|lang=la||Armenian mouse}} is without any foundation. <ref>Century Dictionary, "ermine".</ref>
+Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{term|Armenius|lang=la||Armenian mouse}} is without any foundation. <ref>R:Century 1911.</ref>
 
 ===Pronunciation===
 * {{IPA|/ˈɜːmɪn/}}
