--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -113,6 +113,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 ===References===
 * OED 2nd edition 1989
 * {{R:Century 1911}}
+<references/>
 
 ===Anagrams===
 * {{alphagram|eeimnr}}
