--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -112,9 +112,12 @@ From {{etyl|la|it}} {{term|mania|lang=la}}.
 ==Latin==
 
 ===Noun===
-{{infl|la|noun}}
+{{la-noun|mania|maniae|maniae|f|first}}
 
-# [[craze]], [[mania]]
+# [[craze]], [[#English|mania]], [[madness]]
+
+====Inflection====
+{{la-decl-1st|mani}}
 
 ====Descendants====
 * English: {{l|en|mania}}
