--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -39,6 +39,7 @@ From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} 
 * Italian: {{t+|it|si}},  {{t+|it|già}}
 * Japanese: {{t-|ja|うん|tr=un}},  {{t+|ja|そう|tr=sō}},  {{t+|ja|ええ|tr=ē}},  {{t+|ja|ああ|tr=ā}}
 * Navajo: {{tø|nv|wehee}}
+* Norwegian: {{t|no|ja}}
 * Persian: {{t+|fa|بله}}
 * Polish: {{t+|pl|tak}}
 * Portuguese: {{t+|pt|sim}}
