--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la|en}} {{term|mania|lang=la}} from {{etyl|grc|en}} {{term|μανία||madness|tr=mania|lang=grc|sc=polytonic}}.
+From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανία||madness|tr=mania|lang=grc|sc=polytonic}}.
 
 ===Pronunciation===
 * {{a|US}}: {{IPA|/ˈmeɪniə/}}, {{SAMPA|/"meIni@/}}
