t+el:[[μανία]] t-balance ([[WT:EDIT|Assisted]]) <mania#12794225>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -34,7 +34,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * French: {{t|fr|manie|f}}
 * German: {{t|de|Manie|f}}
 {{trans-mid}}
-* Greek: {{t+|el|μανία|f|tr=mania}}
+* Greek: {{t+|el|μανία|f|tr=mania}}, {{t|el|μανία|f|tr=manía|sc=Grek}}
 * Italian: {{t+|it|mania|f}}
 * Japanese: {{t|ja|躁病|tr=そうびょう, sōbyō|sc=Jpan}}
 * Romanian: {{t+|ro|mânie}}
@@ -46,8 +46,9 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 {{trans-top|excessive desire}}
 * Chinese:
 *: Mandarin: {{t|zh|狂熱|sc=Hani}}, {{t|zh|狂热|tr=kuángrè|sc=Hani}}
-{{trans-mid}}
 * Finnish: {{t|fi|mania}}
+{{trans-mid}}
+* Greek: {{t|el|μανία|f|tr=manía|sc=Grek}}
 {{trans-bottom}}
 
 ===Anagrams===
