--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -34,7 +34,7 @@ From {{etyl|la|en}} {{term|mania|lang=la}}, from {{etyl|grc|en}} {{term|μανί
 * French: {{t|fr|manie|f}}
 * German: {{t|de|Manie|f}}
 {{trans-mid}}
-* Greek: {{t+|el|μανία|f|tr=mania}}, {{t|el|μανία|f|tr=manía|sc=Grek}}
+* Greek: {{t|el|μανία|f|tr=manía|sc=Grek}}
 * Italian: {{t+|it|mania|f}}
 * Japanese: {{t|ja|躁病|tr=そうびょう, sōbyō|sc=Jpan}}
 * Romanian: {{t+|ro|mânie}}
