--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -55,6 +55,7 @@
 * Czech: {{t-|cs|reklama|f}}
 * Danish: {{t-|da|reklame}}
 * Dutch: [[reclame]] {{f}} {{m}}, [[advertentie]] {{f}}
+* Esperanto: [[reklamo]]
 * Estonian: {{t-|et|reklaam}}, {{t+|et|propaganda}}, {{t-|et|kuulutus}}
 * Finnish: [[mainos]], [[mainostus]]
 * French: {{t+|fr|publicité|f}}, {{t+|fr|pub|f}}, {{t+|fr|annonce|f}}
