--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -37,23 +37,24 @@
 * [[Basque]]: {{t-|eu|haga|xs=Basque}}
 * [[Catalan]]: {{t-|ca|bastó|m}}
 * [[Chamicuro]]: {{tø|ccc|chaskolo}}
-* Croatian: {{t-|hr|štap|m}}
 * Czech: {{t+|cs|hůl|f}}
-* Dutch: [[:nl:staf|staf]] {{m}}
+* Dutch: {{t+|nl|staf|c}}
 * Finnish: {{t+|fi|sauva}}, {{t-|fi|salko}}
 * French: {{t+|fr|staff|m}}, {{t+|fr|canne|f}}
 * German: {{t+|de|Stab|m}}
 * Hebrew: {{t-|he|מקל|m|alt=מַקֵּל}}
-{{trans-mid}}
 * [[Ido]]: [[bastono]]
 * Indonesian: [[toya]]
+{{trans-mid}}
 * Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}},  {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|bengala|f}}
 * Russian: {{t+|ru|посох|m|tr=pósox}}
 * [[Scottish Gaelic]]: {{t-|gd|bata|m|xs=Scottish Gaelic}}
-* Serbian: [[štap]] {{m}}/[[штап]] {{m}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|штап|m|alt=шта̑п|sc=Cyrl}}
+*: Roman: {{t|sh|štap|m|alt=štȃp}}
 * Spanish: {{t+|es|bastón|m}}, {{t+|es|báculo|m}}
 * Swedish: {{t|sv|stav|c}}
 {{trans-bottom}}
@@ -65,7 +66,7 @@
 * Finnish: {{t-|fi|nuottiviivasto}}
 * French: {{t+|fr|portée|f}}
 * German: [[Notenlinien]] {{f|p}}
-* Greek: {{t|el|πεντάγραμμο|n|tr=pentagrammo|sc=Grek}}
+* Greek: {{t|el|πεντάγραμμο|n|tr=pentágrammo|sc=Grek}}
 {{trans-mid}}
 * Italian: {{t-|it|pentagramma|m}}
 * [[Macedonian]]: {{t|mk|петолиние|n|tr=petolínie}}
@@ -80,18 +81,20 @@
 * [[Catalan]]: {{t+|ca|staff|m}}, {{t-|ca|plantilla|f}}
 * Czech: {{t-|cs|personál|m}}
 * Danish: {{t|da|stav|c}}; {{t|da|stang|c}}; {{t|da|stab|c}}, {{t|da|personale|n}}
-* Dutch: [[:nl:medewerkers|medewerkers]] {{m|p}}
+* Dutch: {{t+|nl|medewerkers|p}}, {{t|nl|personeel|n}}
 * Finnish: {{t-|fi|henkilöstö}}, {{t-|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}},  {{t+|de|Stab|m}}
-* Greek: {{t|el|προσωπικό|n|tr=prosopiko|sc=Grek}}
+* Greek: {{t|el|προσωπικό|n|tr=prosopikó|sc=Grek}}
 * Italian: {{t+|it|personale|m}}
-{{trans-mid}}
 * [[Macedonian]]: {{t-|mk|персонал|m|tr=personál}},  {{t|mk|кадар|m|tr=kádar}}
+{{trans-mid}}
 * Polish: {{t-|pl|personel|m}},  {{t|pl|pracownicy|p}}
 * Portuguese: {{t+|pt|pessoal|m}}
 * Russian: {{t+|ru|персонал|m|tr=personál}}
-* Serbian: [[osoblje]] {{n}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|особље|n|sc=Cyrl}}
+*: Roman: {{t|sh|osoblje|n}}
 * Spanish: {{t+|es|personal|m}}, {{t-|es|equipo|m}}
 * Swedish: {{t+|sv|personal|c}}
 * [[Volapük]]: {{qualifier|collective}} {{t|vo|pösodef}}
