t+ru:[[Босфор]] t+ja:[[ボスフォラス海峡]] t+ko:[[보스포루스 해협]] t+zh:[[博斯普魯斯海峽]] t+zh:[[博斯普鲁斯海峡]] t+ar:[[مضيق بوسفور]] t+fa:[[تنگه بسفر]] t+hi:[[बोस्पोरुस जल <Bosphorus#12843492>

--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -17,7 +17,7 @@
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
 * [[Afrikaans]]: {{t|af|Bosporus}}, {{t|af|Istanboel-straat}}
-* Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}
+* Arabic: {{Arab|[[مضيق بوسفور]]}} {{IPAchar|(maɖīq búsfor)}} {{m}}, {{t|ar|مضيق بوسفور|m|tr=maDiiq búsfur|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|البوسفور|sc=Arab}}
 * [[Aragonese]]: {{t|an|Bosforo}}
 * Armenian: {{t-|hy|Բոսֆոր|tr=Bosfor}}
@@ -30,6 +30,7 @@
 * Bulgarian: [[Босфор]] {{m}}
 * [[Catalan]]: [[Bòsfor]] {{m}}
 * Chinese: [[博斯普鲁斯海峡]] (Bósīpǔlǔsī hǎixiá)
+*: Mandarin: {{t|zh|博斯普魯斯海峽|sc=Hani}}, {{t|zh|博斯普鲁斯海峡|tr=Bósīpǔlǔsī hǎixiá|sc=Hani}}
 * [[Chuvash]]: {{tø|cv|Босфор|sc=Cyrl}}
 * Croatian: {{t-|hr|Bospor|m}}
 * Czech: {{t-|cs|Bospor|m}}
@@ -44,16 +45,16 @@
 * German: {{t|de|Bosporus|m}}
 * Greek: {{t-|el|Βόσπορος|m|tr=Vósporos}}
 * Hebrew: {{t-|he|בוספורוס|m|alt=בּוֹסְפּוֹרוּס|tr=bosporus}}
-* Hindi: {{t-|hi|बोस्पोरुस जलसन्धि|xs=Hindi}}
+* Hindi: {{t-|hi|बोस्पोरुस जलसन्धि|xs=Hindi}}, {{t|hi|बोस्पोरुस जलसन्धि|tr=bosporus jalsandhi|sc=Deva}}
 * Hungarian: {{t+|hu|Boszporusz}}
 * Icelandic: {{t-|is|Bosporussund}}
 * Indonesian: [[Selat Bosporus]]
 * Italian: {{t-|it|Bosforo|m}}
-* Japanese: [[ボスポラス海峡]] (ボスポラスかいきょう, bosuporasu kaikyō)
+* Japanese: [[ボスポラス海峡]] (ボスポラスかいきょう, bosuporasu kaikyō), {{t|ja|ボスフォラス海峡|tr=Bosuporasu kaikyō|sc=Jpan}}
 * [[Javanese]]: {{t|jv|Selat Bosporus}}
 {{trans-mid}}
 * [[Karakalpak]]: {{tø|kaa|Bosfor}}
-* Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
+* Korean: [[보스포루스 해협]] (boseuporuseu haehyeop), {{t|ko|보스포루스 해협|tr=Boseuporuseu haehyeop|sc=Kore}}
 * Kurdish: {{t|ku|Tengava Stenbolê}}, {{t|ku|Bosfor}}
 * Latin: {{t|la|Bosporus}}
 * Latvian: {{t|lv|Bosfors}}
@@ -64,11 +65,11 @@
 * Norwegian: {{t|no|Bosporos}}
 * [[Occitan]]: [[Bosfòr]] {{m}}
 * [[Old English]]: {{t|ang|Bosporos}}
-* Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor)
+* Persian: {{fa-Arab|[[تنگه بسفر]]}} (tanga bosfor), {{t|fa|تنگه بسفر|tr=tanga Bosfor|sc=fa-Arab}}
 * Polish: {{t+|pl|Bosfor|m}}
 * Portuguese: [[Bósforo]] {{m}}
 * Romanian: [[Bosfor]]
-* Russian: [[Босфор]] {{m}}
+* Russian: [[Босфор]] {{m}}, {{t|ru|Босфор|m|tr=Bosfór|sc=Cyrl}}
 * Serbian: [[Босфор]] ([[Bosfor]]) {{m}}
 * Serbo-Croatian: {{t|sh|Bosfor}}, {{t|sh|Босфор}}
 * [[Sicilian]]: {{t|scn|Bosfuru}}
@@ -82,7 +83,7 @@
 * Ukrainian: [[Босфор]] {{m}}
 * Urdu: {{ur-Arab|[[آبنائے باسفورس]]}}
 * [[Uyghur]]: {{t|ug|ئىستانبۇل بوغازى|sc=ug-Arab}}
-* Vietnamese: [[Eo biển Bosporus]]
+* Vietnamese: [[Eo biển Bosporus]], {{t|vi|eo biển Bosporus}}, {{t|vi|eo biển Bospho}}
 * Welsh: {{t-|cy|Bosphorus|xs=Welsh}}
 * [[West Frisian]]: {{t|fy|Bosporus}}
 * [[Western Panjabi]]: {{tø|pnb|باسفورس}}
