--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -17,7 +17,7 @@
 ====Translations====
 {{trans-top|A strait that passes through Istanbul}}
 * [[Afrikaans]]: {{t|af|Bosporus}}, {{t|af|Istanboel-straat}}
-* Arabic: {{t|ar|مضيق بوسفور|m|tr=maDiiq búsfur|sc=Arab}}
+* Arabic: {{t|ar|مضيق بوسفور|m|tr=maDiiq búsfur|sc=Arab}}, {{t|ar|البوسفور|m|tr=al-búsfur|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|البوسفور|sc=Arab}}
 * [[Aragonese]]: {{t|an|Bosforo}}
 * Armenian: {{t-|hy|Բոսֆոր|tr=Bosfor}}
@@ -51,8 +51,8 @@
 * Indonesian: [[Selat Bosporus]]
 * Italian: {{t-|it|Bosforo|m}}
 * Japanese: {{t|ja|ボスフォラス海峡|tr=Bosuporasu kaikyō|sc=Jpan}}
-* [[Javanese]]: {{t|jv|Selat Bosporus}}
 {{trans-mid}}
+* [[Javanese]]: {{t|jv|Selat Bosporus}}
 * [[Karakalpak]]: {{tø|kaa|Bosfor}}
 * Korean: {{t|ko|보스포루스 해협|tr=Boseuporuseu haehyeop|sc=Kore}}
 * Kurdish: {{t|ku|Tengava Stenbolê}}, {{t|ku|Bosfor}}
