--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -25,6 +25,7 @@
 * [[Azerbaijani]]: [[Bosfor Boğazı]]
 * [[Bashkir]]: {{tø|ba|Босфор|tr=Bosfór|sc=Cyrl}}
 * [[Basque]]: {{t|eu|Bosforo itsasartea}}
+* Belarusian: {{t|be|Басфор|m|tr=Basfór|sc=Cyrl}}
 * Bosnian: [[Bosfor]] {{m}}
 * [[Breton]]: [[Bosfor]]
 * Bulgarian: {{t|bg|Босфор|m|tr=Bosfor|sc=Cyrl}}
@@ -67,14 +68,14 @@
 * [[Old English]]: {{t|ang|Bosporos}}
 * Persian: {{t|fa|تنگه بسفر|tr=tanga Bosfor|sc=fa-Arab}}
 * Polish: {{t+|pl|Bosfor|m}}
-* Portuguese: [[Bósforo]] {{m}}
+* Portuguese: [[Bósforo]] {{m}}, {{t|pt|Bósforo|m}}
 * Romanian: [[Bosfor]]
 * Russian: {{t|ru|Босфор|m|tr=Bosfór|sc=Cyrl}}
 * Serbian: [[Босфор]] ([[Bosfor]]) {{m}}
 * Serbo-Croatian: {{t|sh|Bosfor|m}}, {{t|sh|Босфор|m}}
 * [[Sicilian]]: {{t|scn|Bosfuru}}
 * Slovene: {{t+|sl|Bospor|m}}
-* Spanish: [[Bósforo]] {{m}}
+* Spanish: [[Bósforo]] {{m}}, {{t|es|Bósforo|m}}
 * Swahili: {{t|sw|Bosporus}}
 * Swedish: [[Bosporen]]
 * [[Tatar]]: {{t|tt|Босфор бугазы|tr=Bosfor bugazy|sc=Cyrl}}, {{t|tt|Истанбул бугазы|tr=Istanbul bugazy|sc=Cyrl}}
