--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -129,12 +129,13 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu):
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
+* {{l|ja|月型}} (''tsukigata'') or {{l|ja|月形}} (''tsukigata''): [[crescent moon]]
 * {{l|ja|半月}} ({{l|ja|はんげつ}}, [[hangetsu]]): [[half moon]]
-* {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
 * {{l|ja|凸月}} ({{l|ja|でこげつ}}, [[dekogetsu]]: [[gibbous moon]]
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
 * {{l|ja|盛月}} or {{l|ja|増月}}: [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: [[waning moon]]
+* {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
 {{bottom}}
 
 ====Compounds====
