--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -22,6 +22,7 @@ From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 * Chinese:
 *: Mandarin: {{t-|cmn|拉斯維加斯|sc=Hani}}, {{t-|cmn|拉斯维加斯|tr=Lāsīwéijiāsī|sc=Hani}}
 {{trans-mid}}
+* Esperanto: {{t|eo|Lasvegaso}}
 * Japanese: {{t|ja|ラスベガス|tr=Rasubegasu}}
 * Korean: {{t|ko|라스베이거스|tr=Laseubeigeoseu|sc=Hang}}
 * Navajo: {{tø|nv|Naʼazhǫǫsh hátsoh}}
