--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -8,3 +8,12 @@
 # A suburb of north-west [[London]], [[England]]
 # A stadium in [[London]], the national sports stadium and venue where finals of major [[football]] tournaments are held.
 #: ''If they carry on with their good form, they'll be at '''Wembley''' at the end of the season.''
+#* {{quote-news
+|year=2011
+|date=April 11
+|author=Phil McNulty  
+|title=Liverpool   3 - 0   Man City
+|work=BBC Sport
+|url=http://news.bbc.co.uk/sport2/hi/football/eng_prem/9449111.stm
+|page=
+|passage=Dirk Kuyt sandwiched a goal in between Carroll's double as City endured a night of total misery, with captain Carlos Tevez limping off early on with a hamstring strain that puts a serious question mark over his participation in Saturday's FA Cup semi-final against Manchester United at '''Wembley'''. }}
