--- a/en/s/summerlike.801705.wikitext
+++ b/en/s/summerlike.801705.wikitext
@@ -24,6 +24,7 @@
 * Finnish: {{t-|fi|kesäinen}}
 * German: {{t-|de|sommerlich}}
 {{trans-mid}}
+* Hungarian: {{t|hu|nyárias}}
 * Norwegian: {{t|nl|sommerlig}}
 {{trans-bottom}}
 
