--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -68,6 +68,7 @@
 * [[Macedonian]]: {{t-|mk|млин|m|tr=mlin}}, {{t|mk|мелница|f|tr=mélnica}}, {{t|mk|мелница|f|tr=mélnica}}
 * Norwegian: {{t+|no|mølle|m}}, {{t|no|mylna|f}}
 * [[Old High German]]: [[mulin]] {{f}}
+* Persian: {{t|fa|آسیاب|sc=fa-Arab}}
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
 * Romanian: {{t-|ro|moară}}
