--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -19,7 +19,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 {{trans-top|to make a solemn promise}}
 * Arabic: {{rfc-tbot}}{{t|ar|تعهد|sha|alt=تَعَه{{ar-dia|tr=ta3ahhada}}دَ|sc=Arab}}
 * Chinese:
-*: {{trreq|zh-yue}}
+*: Cantonese: {{tø|zh-yue|誓|tr=sai6|sc=Hani}}
 *: {{trreq|gan}}
 *: {{trreq|hak}}
 *: Mandarin: {{t|cmn|發誓|sc=Hani}}, {{t|cmn|发誓|tr=fāshì|sc=Hani}}
