--- a/en/a/amœbas.856188.wikitext
+++ b/en/a/amœbas.856188.wikitext
@@ -1,9 +1,11 @@
 ==English==
 
 ===Noun===
-'''amœbas'''
+{{infl|en|noun}}
 
-# {{plural of|[[amœba]]}}
+# {{alternative form of|{{l|en|amœbæ}}|nodot=t}}; {{plural of|{{l|en|amœba}}|nocap=t}}.
+
+[[Category:English terms spelled with Œ|amoebas]]
 
 [[ar:amœbas]]
 [[fr:amœbas]]
