t+ca:[[sagnar]] ([[WT:EDIT|Assisted]]) <bleed#12877024>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -39,6 +39,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}} < {{proto|Germanic|blōþijan
 * Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel}}
 * Bengali: {{t|bn|রক্ত ঝরা|sc=Beng}}, {{t|bn|রক্ত পড়া|sc=Beng}}
 * Bulgarian: {{t|bg|тече кръв}}
+* [[Catalan]]: {{t|ca|sagnar}}
 * Chinese: {{t-|cmn|流血|tr=liúxuè|sc=Hani}}, {{t|cmn|放血|tr=fàngxuè|sc=Hani}}
 * Czech: {{t-|cs|krvácet}}
 * Danish: {{t-|da|bløde}}
@@ -89,6 +90,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}} < {{proto|Germanic|blōþijan
 
 {{trans-top|draw blood}}
 * Bulgarian: {{t|bg|проливам кръв}},  {{t|bg|пускам кръв}}
+* [[Catalan]]: {{t|ca|sagnar}}
 * Filipino: {{tø|fil|duguan}}
 * Irish: {{t|ga|fuiligh|xs=Irish}}
 {{trans-mid}}
