--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -20,6 +20,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 ====Translations====
 {{trans-top|a risk undertaken with a potential gain}}
 * Dutch: {{t+|nl|gok|m}}
+* Finnish: {{t+|fi|uhkapeli}}
 * French: {{t+|fr|pari|m}}
 * German: {{t+|de|Glücksspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
@@ -31,6 +32,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 
 {{trans-top|a risky venture}}
 * Dutch: [[gok]] {{m}}, [[waagstuk]] {{n}}
+* Finnish: {{t+|fi|uhkapeli}}
 * German: {{t+|de|Glücksspiel|n}}
 {{trans-mid}}
 * Japanese: [[賭け]] ([[かけ]], ''kake''), [[ギャンブル]] (''gyanburu'')
