t+fi:[[turruttava]] ([[WT:EDIT|Assisted]]) <mind-numbing#12979595>

--- a/en/m/mind-numbing.775549.wikitext
+++ b/en/m/mind-numbing.775549.wikitext
@@ -13,7 +13,7 @@
 *: {{trreq|Mandarin}}
 {{trans-mid}}
 * Dutch: {{t-|nl|geestdodend}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|turruttava}}
 {{trans-bottom}}
 
 [[pl:mind-numbing]]
