--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -23,8 +23,9 @@ Originally meaning an assembly, that handled political and court issues. Later a
 # {{legal}} whatever can be [[owned]].
 # the [[latest]] [[fad]] or [[fashion]].
 # {{in the plural}} [[clothes]], [[possessions]] or [[equipment]].
-# {{informal}} A unit.
+# {{informal}} A unit or container, usually containing edible goods.
 #: ''Get me a '''thing''' of apple juice at the store.''
+#: ''I just ate a whole '''thing''' of jelly beans.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
 # ''(in certain fixed expressions)'' A [[problem]], [[dilemma]], or [[complicating]] [[factor]].
 #: ''The car looks cheap, but the '''thing''' is, I have doubts about its safety.''
