--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -129,6 +129,9 @@
 ===Etymology===
 From {{proto|Slavic|syrъ|lang=sh}}.
 
+===Pronunciation===
+* {{IPA|/sîr/|lang=sh}}
+
 ===Noun===
 {{sh-noun|g=m|head=sȉr|r|сир|си̏р}}
 
