--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -88,7 +88,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Portuguese: {{t+|pt|texugo|m}}
 * Romanian: {{t+|ro|viezure|m}},  {{t+|ro|bursuc|m}}
 * [[Romansch]]: [[tais]]
-* Russian: {{t+|ru|барсук|m|tr=barsuk}}
+* Russian: {{t+|ru|барсук|m|tr=barsúk}}
 * [[Sami]]: [[mievri]]
 * [[Sardinian]]: [[tassu]], [[cane de ribu]]
 * [[Scottish Gaelic]]: [[broc]] {{m}}
@@ -100,7 +100,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Swedish: {{t+|sv|grävling|c}}
 * [[Taos]]: [[kòlno’óna]]
 * Turkish: {{t+|tr|porsuk}}
-* Ukrainian: {{t+|uk|борсук|m|tr=borsuk|xs=Ukrainian}}
+* Ukrainian: {{t+|uk|борсук|m|tr=borsúk|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[šwinc]] {{m}}
 * [[Volapük]]: {{t+|vo|daf|xs=Volapük}}
 * Welsh: {{t+|cy|mochyn daear|m|xs=Welsh}}
