--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -72,8 +72,8 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Irish: {{t+|ga|broc|m|xs=Irish}}
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t-|ja|アナグマ|tr=anaguma}} ({{t|ja|穴熊|sc=Jpan}})
-{{trans-mid}}
 * [[Khalkha Mongolian]]: [[дорго]] (dorog)
+{{trans-mid}}
 * Korean: {{t|ko|오소리|tr=osori|sc=Kore}}
 * Kurdish:
 ** Kurmanji: [[kurbeşk]]
@@ -83,6 +83,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[Lower Sorbian]]: [[jazw]], [[šwińc]]
 * [[Macedonian]]: {{t|mk|јазовец|m|tr=jázovec}}
 * [[Manx]]: [[broc]]
+* Mongolian: {{t|mn|дорго|tr=dorgo|sc=Cyrl}}
 * Navajo: {{tø|nv|nahashchʼidí}}
 * Norwegian: {{t|no|grevling|m}}
 * [[Occitan]]: [[tais]] {{m}}, [[rabàs]] {{m}}
