--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -71,7 +71,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Icelandic: {{t-|is|greifingi|m}}
 * Irish: {{t+|ga|broc|m|xs=Irish}}
 * Italian: {{t+|it|tasso|m}}
-* Japanese: {{t-|ja|アナグマ|tr=anaguma}} ({{t|ja|穴熊|sc=Jpan}})
+* Japanese: {{t-|ja|アナグマ|tr=anaguma}}, {{t|ja|穴熊|tr=あなぐま, anaguma|sc=Jpan}}
 * [[Khalkha Mongolian]]: [[дорго]] (dorog)
 {{trans-mid}}
 * Korean: {{t|ko|오소리|tr=osori|sc=Kore}}
