--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -73,8 +73,8 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t-|ja|アナグマ|tr=anaguma}}, {{t|ja|穴熊|tr=あなぐま, anaguma|sc=Jpan}}
 * [[Khalkha Mongolian]]: [[дорго]] (dorog)
-{{trans-mid}}
 * Korean: {{t|ko|오소리|tr=osori|sc=Kore}}
+{{trans-mid}}
 * Kurdish:
 ** Kurmanji: [[kurbeşk]]
 * [[Ladin]]: [[tas]]
@@ -96,6 +96,9 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[Sardinian]]: [[tassu]], [[cane de ribu]]
 * [[Scottish Gaelic]]: [[broc]] {{m}}
 * Serbian: [[jазавац]] (jazavac) {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|jазавац|m}}
+*: Roman: {{t|sh|jazavac|m}}
 * [[Seri]]: [[ziix hant ctaxoj]], [[xeezej]]
 * Slovak: [[jazvec]] {{m}}
 * Slovene: {{t+|sl|jazbec|m}}
