--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -46,7 +46,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[Basque]]: [[azkonar]]
 * Belarusian: {{t-|be|барсук|m|tr=barsúk|xs=Belarusian}}
 * [[Breton]]: {{t|br|broc'h|m}}
-* Bulgarian: {{t+|bg|язовец|m|tr=jazovec}}
+* Bulgarian: {{t+|bg|язовец|m|tr=jázovec}}
 * [[Catalan]]: [[teixó]] {{m}}
 * [[Chechen]]: [[дIама]]
 * Cherokee: [[ᎤᎫᎾ]] (uguna)
@@ -99,7 +99,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 *: Cyrillic: {{t|sh|jазавац|m}}
 *: Roman: {{t|sh|jazavac|m}}
 * [[Seri]]: [[ziix hant ctaxoj]], [[xeezej]]
-* Slovak: [[jazvec]] {{m}}, {{t|sk|jazvec|m}}
+* Slovak: {{t|sk|jazvec|m}}
 * Slovene: {{t+|sl|jazbec|m}}
 * Spanish: {{t+|es|tejón|m}}
 * Swedish: {{t+|sv|grävling|c}}
