--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 ====Translations====
 {{trans-top|in or very near a particular place}}
 * Arabic: {{Arab|[[عند]]}} ({{unicode|[[ʕand]]}})
+*: [[Egyptian Arabic]]: {{tø|arz|عند|tr=ʕand|sc=Arab}}
 * [[Breton]]: [[e#Breton|e]]
 * Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
 * [[Catalan]]: [[a]]
