--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -52,6 +52,7 @@
 {{trans-top|another time}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
 * Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) 'úkhra}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) 'úkhra}} {{adverbial accusative used}}
+*: [[Egyptian Arabic]]: {{tø|arz|تاني|tr=tani|sc=Arab}}
 * Armenian: {{t-|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
 * [[Basque]]: [[berriro]]
 * Belarusian: {{t|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
