--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -33,6 +33,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Bosnian: {{t|bs|lasica|f}}
 * [[Breton]]: {{t+|br|kaerell|xs=Breton}}
 * Chinese: {{t+|cmn|黄鼠狼|sc=Hani}} (huángshǔláng)
+* Croatian: {{t|hr|lasica|f}}
 * Czech: {{t-|cs|lasice|f}}
 * Danish: {{t+|da|brud|c}}
 * Dutch: {{t+|nl|wezel|f}}
@@ -43,8 +44,8 @@ The verb comes from the supposed cunningness of the weasel.
 * German: {{t+|de|Wiesel|n}}
 * Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|sc=Grek}}
 * Hebrew: {{t|he|סמור|sc=Hebr|tr=samur}}
-* Hungarian: {{t+|hu|menyét}}
 {{trans-mid}}
+* Hungarian: {{t+|hu|menyét}}
 * Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|飯綱}} (いいずな) (īzuna)
