--- a/en/f/Faraday rotation.774454.wikitext
+++ b/en/f/Faraday rotation.774454.wikitext
@@ -1,15 +1,1 @@
-==English==
-===Etymology===
-
-From [[w:Michael Faraday|Michael Faraday]], who first described the effect.
-
-===Noun===
-{{en-noun|sg=[[Faraday]] [[rotation]]}}
-{{wikipedia}}
-
-#{{electromagnetism}} An interaction between a [[polarize]]d electromagnetic pulse, such as a beam of light, and a [[magnetic field]], in which the plane of polarization is rotated in proportion to the [[intensity]] of the component of the magnetic field in the direction of travel of the pulse.
-
-====Synonyms====
-*[[Faraday effect]]
-
-[[zh:Faraday rotation]]
+'''please delete this page. it is useless and clogs up google searches.  Wikipedia is already the first hit for faraday rotation.'''''Italic text''
