--- a/en/s/summerlike.801705.wikitext
+++ b/en/s/summerlike.801705.wikitext
@@ -25,7 +25,7 @@
 * German: {{t-|de|sommerlich}}
 {{trans-mid}}
 * Hungarian: {{t|hu|nyárias}}
-* Norwegian: {{t|nl|sommerlig}}
+* Norwegian: {{t|no|sommerlig}}
 {{trans-bottom}}
 
 [[sv:summerlike]]
