--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -63,6 +63,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}} (''chicken'')
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t-|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t-|hu|zsaru}}
+* Italian: {{t|it|agente di polizia|m}}, {{t|it|poliziotto}}
 * Norwegian: {{t+|no|purk|m}}
 {{trans-mid}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
