--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -112,21 +112,21 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月蝕}}{{l|ja|、}}{{l|ja|月食}} ({{l|ja|げっしょく}}, [[gesshoku]]): [[lunar eclipse]]
 * {{l|ja|月卿}} ({{l|ja|げっけい}}, gekkei)
 * {{l|ja|月次}} ({{l|ja|げつじ}}, getsuji)
-{{mid3}}
 * {{l|ja|月賦}} ({{l|ja|げっぷ}}, [[geppu]]): [[monthly]] [[payment]]
+{{mid3}}
 * {{l|ja|月末}}
 * {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
 * {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
 * {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]):
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
 * {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]):
-* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei: "moon cake"
-* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu: "the end of the month"
+* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): "moon cake"
+* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "the end of the month"
 * {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi):
 * {{l|ja|月旦}} ({{l|ja|げったん}}, gettan):
-{{mid3}}
 * {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]):
 * {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
+{{mid3}}
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu):
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
 * {{l|ja|月型}} (''tsukigata'') or {{l|ja|月形}} (''tsukigata''): [[crescent moon]]
@@ -136,6 +136,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|盛月}} or {{l|ja|増月}}: [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: [[waning moon]]
 * {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
+* {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{bottom}}
 
 ====Derived terms====
