/* Translations */ entire SC lang <rabbit#13054167>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -52,7 +52,6 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Basque]]: [[untxi]]
 * Belarusian: {{t-|be|трус|m|tr=trus|xs=Belarusian}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
 * Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|খরেগাশ|tr=khôrgosh|sc=Beng}}
-* Bosnian: {{t-|bs|zec|m}}, {{t-|bs|kunić|m}}
 * [[Breton]]: [[lapin]], [[konikl]]
 * Bulgarian: {{t+|bg|заек|m|tr=zaek}}
 * [[Catalan]]: {{t+|ca|conill}}
@@ -60,7 +59,6 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Chickasaw]]: [[chokfi]]
 * Chinese:
 *: Mandarin: {{t|zh|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t|zh|白兔|tr=báitù|sc=Hani}}
-* Croatian: {{t-|hr|kunić|m}}
 * Czech: {{t-|cs|králík|m}}
 * Danish: {{t+|da|kanin|c}}
 * [[Dena'ina]]: {{tø|tfn|hvaya}}
@@ -95,8 +93,8 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Ladin]]: [[conicio]]
 * [[Ladino]]: [[konejo]]
 * Latin: {{t+|la|cuniculus|alt=cunīculus|m}}
-{{trans-mid}}
 * Latvian: [[trusis]]
+{{trans-mid}}
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
 * [[Lower Sorbian]]: [[karnikel]]
 * [[Macedonian]]: [[заjак]] (zajak) {{m}}
@@ -120,9 +118,9 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Sardinian]]: [[cunillu]], [[cacciappu]]
 * [[Scots]]: {{tø|sco|kinnen|xs=Scots}}
 * [[Scottish Gaelic]]: {{t-|gd|coineanach|m|xs=Scottish Gaelic}}, {{t-|gd|rabaid|m|xs=Scottish Gaelic}}
-* Serbian:
-*: Cyrillic: {{t-|sr|зец|m|sc=Cyrl}}, {{t-|sr|кунић|m|sc=Cyrl}}
-*: Roman: [[zec#Serbian|zec]] {{m}}, [[kunić#Serbian|kunić]] {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t-|sh|зец|m|alt=зе̑ц|sc=Cyrl}}, {{t-|sh|кунић|m|alt=ку̀нӣћ|sc=Cyrl}}
+*: Roman: {{t-|sh|zec|m|alt=zȇc}}, {{t-|sh|kunić|m|alt=kùnīć}}
 * [[Sicilian]]: {{t+|scn|cunigghiu|m|xs=Sicilian}}
 * Slovak: [[králik]] {{m}}
 * Slovene: {{t+|sl|kunec|m}}
@@ -152,9 +150,11 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Finnish: {{t-|fi|kaniturkis}}, {{t+|fi|kani}}
 * Greek: {{t|el|κόνικλος|m|tr=kóniklos}}
 * Italian: {{t+|it|lapin|m}}
-{{trans-mid}}
 * [[Scottish Gaelic]]: {{t-|gd|coineanach|m|xs=Scottish Gaelic}}, {{t-|gd|rabaid|m|xs=Scottish Gaelic}}
-* Serbian: {{t|sr|зечевина|f|tr=zečevina|sc=Cyrl}}
+{{trans-mid}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|зечевина|f|sc=Cyrl}}
+*: Roman: {{t|sh|zečevina|f}}
 * [[Volapük]]: {{t|vo|kroligapläd}}
 {{trans-bottom}}
 
