--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -19,16 +19,16 @@ Literally "beyond the river [[Dniester]]".
 
 ====Translations====
 {{trans-top|Transnistria, an autonomous territory in Moldova}}
-* Arabic: {{Arab|[[ترانسنيستريا]]}} (Transnistriya) {{f}}, {{t|ar|ترانسنيستريا|f|tr=transnistriya|sc=Arab}}
+* Arabic: {{t|ar|ترانسنيستريا|f|tr=transnistriya|sc=Arab}}
 * Armenian: {{t-|hy|Մերձդնեստր|tr=Merjdnestr}}
 * [[Asturian]]: {{t-|ast|Transnistria|f|xs=Asturian}}
 * [[Basque]]: {{t-|eu|Transnistria|xs=Basque}}
-* Belarusian: {{t|be|Прыднястроўе|xs=Belarusian}}
+* Belarusian: {{t|be|Прыднястроўе|n|tr=Prydnjastróŭje|xs=Belarusian}}
 * Bosnian: {{t|bs|Pridnjestrovska Moldavska Republika|f}}
-* Bulgarian: {{t|bg|Приднестровие|f|tr=Pridnestrovie}}
+* Bulgarian: {{t|bg|Приднестровие|n|tr=Pridnestróvie}}
 * [[Catalan]]: {{t-|ca|Transnístria|f}}
 * Chinese:
-*: Mandarin: {{zh-tsp|涅斯特里亞|涅斯特里亚|Nièsītèlǐyà}}, {{t|zh|涅斯特里亞|sc=Hani}}, {{t|zh|涅斯特里亚|tr=Nièsītèlǐyà|sc=Hani}}
+*: Mandarin: {{t|zh|涅斯特里亞|sc=Hani}}, {{t|zh|涅斯特里亚|tr=Nièsītèlǐyà|sc=Hani}}
 * Croatian: {{t|hr|Pridnjestrovska Moldavska Republika|f}}
 * Czech: {{t|cs|Podněstří}}
 * Dutch: {{t|nl|Trans-Nistrië}}
@@ -36,7 +36,7 @@ Literally "beyond the river [[Dniester]]".
 * Estonian: {{t-|et|Transnistria}}
 * Finnish: {{t+|fi|Transnistria}}
 * French: {{t+|fr|Transnistrie|f}}
-* Georgian: {{t|ka|დნესტრისპირეთი|sc=Geor|xs=Georgian}} (dnestrispiret'i)
+* Georgian: {{t|ka|დნესტრისპირეთი|tr=dnestrispiret'i|sc=Geor|xs=Georgian}}
 * German: {{t|de|Transnistrien|n}}
 * Greek: {{t|el|Υπερδνειστερία|f}}
 * Hebrew: {{t|he|טרנסניסטריה|f}}
@@ -44,8 +44,8 @@ Literally "beyond the river [[Dniester]]".
 * Hungarian: {{t|hu|Dnyeszter-menti Moldáv Köztársaság}}
 * Indonesian: {{t-|id|Transnistria|xs=Indonesian}}
 * Italian: {{t-|it|Transnistria|f}}
-* Japanese: {{t|ja|沿ドニエストル共和国}} (えんドニエストルきょうわこく, en Doniesutoru kyōwakoku)
-* Korean: {{t|ko|트란스니스트리아|sc=Hang}} (teuranseuniseuteuria)
+* Japanese: {{t|ja|沿ドニエストル共和国}} (えんドニエストルきょうわこく, en-Doniesutoru-kyōwakoku)
+* Korean: {{t|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
 * Latvian: {{t|lv|Piedņestras Moldāvu Republika|xs=Latvian}}
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Придњестровие|n|tr=Pridnjestróvie}}
