--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -8,7 +8,7 @@
 *: {{audio|en-us-blow.ogg|Audio (US)}}
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{term|blawan|blāwan|lang=ang}}, from {{proto|Germanic|blēanan}} (compare German {{term|blähen|lang=de}}), from {{proto|Indo-European|bhle-}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile').
+From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blāwan|to blow, breathe, inflate, sound|lang=ang}}, from {{proto|Germanic|blēanan|to blow|lang=en}} (compare German {{term|blähen|lang=de}}), from {{proto|Indo-European|bhle-}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile').
 
 ====Verb====
 {{en-verb|blows|blowing|'''[[blew]]'''|'''[[blown]]'''}}
