t+sl:[[cvetača]] t-balance ([[WT:EDIT|Assisted]]) <cauliflower#13078324>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -49,6 +49,7 @@
 * Polish: {{t+|pl|kalafior|m}}
 * Romanian: {{t|ro|conopidă|f}}
 * Russian: {{t+|ru|цветная капуста|f|tr=cvetnája kapústa}}
+* Slovene: {{t|sl|cvetača|f}}
 * [[Sotho]]: {{t|st|kholifolawa|xs=Sotho}}
 * Spanish: {{t-|es|coliflor|f}}
 * Swedish: {{t+|sv|blomkål|c}}
@@ -63,9 +64,10 @@
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * Hungarian: {{t+|hu|karfiol}}
-{{trans-mid}}
 * Navajo: {{tø|nv|chʼil łigaii}}
+{{trans-mid}}
 * Romanian: {{t|ro|conopidă|f}}
+* Slovene: {{t|sl|cvetača|f}}
 * Turkish: {{t+|tr|karnabahar}}
 {{trans-bottom}}
 
