--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -129,6 +129,7 @@
 * [[Kumyk]]: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
 * [[Kyrgyz]]: {{t-|ky|арал|tr=aral|sc=Cyrl|xs=Kyrgyz}}
 * [[Lao]]: {{t-|lo|ດອນ|tr=döön|sc=Laoo|xs=Lao}}
+* [[Latgalian]]: {{qualifier|ocean, sea}} {{tø|ltg|jiursola}}, {{qualifier|lake}} {{tø|ltg|azarsola}}, {{qualifier|river}} {{tø|ltg|upsola}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f|xs=Lithuanian}}
@@ -212,6 +213,7 @@
 * Icelandic: {{t+|is|eyja|f}}, {{t|is|eyland|n}}
 {{trans-mid}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shimá}}
+* [[Latgalian]]: {{qualifier|village}} {{tø|ltg|sola}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
 * [[Macedonian]]: {{t-|mk|остров|m|tr=óstrov}}
 * Norwegian: {{t+|no|øy|m|f}}
