--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -145,7 +145,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月の王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
 * {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki shiro''): lit. "''[[moon]] [[castle]]''"
 * {{l|ja|月宮殿}} ({{l|ja|つききゅうでん}}, ''tsuki kyūden''): lit. "''[[moon]] [[palace]]''"
-* {{l|ja|月宮廷}} ({{l|ja|つきのきゅうてい}}, ''tsuki kyūtei''): lit. "''[[royal]] [[court]] of the moon''"
+* {{l|ja|月の宮廷}} ({{l|ja|つきのきゅうてい}}, ''tsuki kyūtei''): lit. "''[[royal]] [[court]] of the moon''"
 
 ====References====
 {{ja-kref
