t+lt:[[žebenkštis ]] t+ltg:[[luoseica]] ([[WT:EDIT|Assisted]]) <weasel#13106249>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -50,7 +50,9 @@ The verb comes from the supposed cunningness of the weasel.
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|飯綱}} (いいずな) (īzuna)
 * Korean: {{t-|ko|족제비|sc=Hang}} (jokjebi)
+* [[Latgalian]]: {{tø|ltg|luoseica}}
 * Latvian: {{t+|lv|zebiekste|f|xs=Latvian}}
+* Lithuanian: {{t|lt|žebenkštis |m}}
 * [[Macedonian]]: {{t-|mk|ласица|f|tr=lásica}}
 * Navajo: {{tø|nv|dlǫ́ʼii}}
 * Polish: {{t+|pl|łasica|f}}
