t+ltg:[[saskys]] ([[WT:EDIT|Assisted]]) <polecat#13106251>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -49,6 +49,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * Hungarian: {{t+|hu|görény}}
 * Irish: [[firéad]]
 * Italian: {{t-|it|puzzola|f}}
+* [[Latgalian]]: {{tø|ltg|saskys|m}}
 * Latin: {{t+|la|mustella}}
 * Latvian: [[sesks]]
 {{trans-mid}}
