--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -100,6 +100,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Macedonian]]: [[заjак]] (zajak) {{m}}
 * Malay: {{t+|ms|arnab|xs=Malay}}
 * Maltese: {{t-|mt|fenek|m|xs=Maltese}}
+* [[Manx]]: {{t|gv|conning|f}}
 * [[Marathi]]: [[ससा]] {{m}}, [[सशी]] {{f}}
 * [[Maricopa]]: {{tø|mrc|xalyaw}}
 * [[Nahuatl]]: [[tochtli]]
