t+jv:[[barang]] ([[WT:EDIT|Assisted]]) <thing#13110549>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -96,6 +96,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 {{trans-mid}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t|ja|物|tr=[[もの]], mono|sc=Jpan}}, {{t|ja|事|tr=[[こと]], koto|sc=Jpan}}
+* [[Javanese]]: {{t|jv|barang}}
 * Korean: {{t|ko|물건|tr=mulgeon|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
