--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -228,6 +228,7 @@
 * German: {{t+|de|Bulle|m}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
 {{trans-mid}}
+* Hungarian: {{t|hu|sün}}
 * Icelandic: {{t|is|löggusvín|n}}
 * Norwegian: {{t+|no|purk|m}}, {{t+|no|snut|m}}
 * Polish: {{t+|pl|pies|m}}
