--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -101,6 +101,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Slovak: {{t|sk|jazvec|m}}
 * Slovene: {{t+|sl|jazbec|m}}
 * Spanish: {{t+|es|tejón|m}}
+* Swahili: {{t|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
 * [[Taos]]: [[kòlno’óna]]
 * Turkish: {{t+|tr|porsuk}}
