--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -1,7 +1,8 @@
 ==English==
 {{wikipedia|Gagaku}}
 ===Etymology===
-From {{etyl|ja}} [[雅楽]] (gagaku)
+From {{etyl|ja}} [[雅楽]] (''gagaku'', literally "elegant (or noble) music")
+
 ===Noun===
 {{en-noun|-}}
 
