--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -39,7 +39,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * Bulgarian: {{t|bg|мехурче|n}}
 * Chinese:
 *: Mandarin: {{t-|cmn|泡|tr=pào|sc=Hani}}, {{t|cmn|氣泡|sc=Hani}}, {{t|cmn|气泡|tr=qìpào|sc=Hani}}, {{t|cmn|泡沫|tr=pàomò|sc=Hani}}
-* Croatian: {{t|hr|mjehurić|m}}
 * Czech: {{t-|cs|bublina|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
@@ -50,9 +49,9 @@ Partly imitative, also influenced by {{term|burble}}.
 * Hungarian: {{t+|hu|buborék}}
 * Italian: {{t+|it|bolla|f}}
 * Japanese: {{l|ja|泡}} ({{l|ja|あわ}}, ''awa''), {{l|ja|泡立つ}}, [[shabon]]
-{{trans-mid}}
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
+{{trans-mid}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: {{t-|lv|burbulis|m|xs=Latvian}}
 * [[Macedonian]]: {{t|mk|меур|m|tr=méur}}
@@ -61,6 +60,9 @@ Partly imitative, also influenced by {{term|burble}}.
 * Portuguese: {{t+|pt|bolha|f}}
 * Romanian: {{t|ro|balon|n}}, {{t|ro|bășică|f}}, {{t|ro|bulă|f}}
 * Russian: {{t|ru|пузырь|m|tr=puzýr'}}
+* Serbo-Croatian: 
+*: Cyrillic: {{t|sh|мјехурић|m|alt=мјеху̀рић|sc=Cyrl}} ([[Ijekavian]]), {{t|sh|мехурић|m|alt=меху̀рић|sc=Cyrl}} ([[Ekavian]])
+*: Roman: {{t|sh|mjehurić|m|alt=mjehùrić}} ([[Ijekavian]]), {{t|sh|mehurić|m|alt=mehùrić}} ([[Ekavian]])
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t+|sv|bubbla|c}}, {{t|sv|såpbubblor}} {{qualifier|soap bubble}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga}}
