--- a/en/p/pusillanimity.741240.wikitext
+++ b/en/p/pusillanimity.741240.wikitext
@@ -20,7 +20,7 @@ From the ecclesiastical {{etyl|la}} ''[[pusillanimis]]'', from ''[[pusillus]]'' 
 
 ====Translations====
 {{trans-top}}
-*Italian: {{t-|it|pusillanimità|m}}, {{t-|it|viltà|m}}
+*Italian: {{t-|it|pusillanimità|f}}, {{t-|it|viltà|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
