--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -26,6 +26,11 @@
 
 # {{inflection of|malus|malus|acc|f|s|lang=la}}
 
+===Verb===
+{{la-verb-form|mālam}}
+
+# {{conjugation of|malo|mālō|1|s|fut|act|ind|lang=la}}
+
 ----
 
 ==Malay==
