Undo revision 13171560 by [[Special:Contributions/198.53.228.101|198.53.228.101]] ([[User talk:198.53.228.101|talk]]). No, that's the verb <in the know#13171645>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -39,7 +39,7 @@
 * {{trreq|pt}}
 * Russian: {{t|ru|в курсе|sc=Cyrl}}
 * {{trreq|sh}}
-* Spanish: {{t|es|tener conocimiento|m}}
+* {{trreq|es}}
 * {{trreq|th}}
 * {{trreq|tr}}
 * {{trreq|uk}}
