--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,7 +1,7 @@
 ==Portuguese==
 
 ===Noun===
-{{es-noun-mf|f=estadounidense|pl=estadounidenses}}
+Americano
 
 # citizen of the [[United States]] of America.
 
