Reverted edits by [[Special:Contributions/195.113.132.226|195.113.132.226]] ([[User_talk:195.113.132.226|Talk]]); changed back to last version by [[User:Rukhabot|Rukhabot]] <estadounidense#13173544>

--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,8 +1,7 @@
 ==Portuguese==
 
 ===Noun===
-Americano m
-Americana f
+{{es-noun-mf|f=estadounidense|pl=estadounidenses}}
 
 # citizen of the [[United States]] of America.
 
