--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -29,7 +29,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * [[Bashkir]]: {{tø|ba|тейен|tr=teyen|sc=Cyrl|xs=Bashkir}}
 * [[Basque]]: [[katagorri]],  {{t-|eu|urtxintxa|xs=Basque}}
 * Belarusian: {{t|be|звачайная ваверка|f|tr=zvačajnaja vaverka|xs=Belarusian}}
-* [[Breton]]: [[gwiñver]] {{m}}, -ed {{p}}, [[kaz-koad]] {{m}}, kizier-koad {{p}}, {{t|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
+* [[Breton]]: {{t|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
 * Bulgarian: {{t+|bg|катерица|f|tr=katerica}}
 * Cantabrian: [[esquilu]] {{m}}
 * [[Catalan]]: [[esquirol]] {{m}}
