/* Translations */ some translation cleanup <mouflon#13185366>

--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -16,9 +16,9 @@
 {{trans-top|sheep}}
 * Albanian: {{t-|sq|mufloni|xs=Albanian}}
 * [[Basque]]: [[mufloi]]
-* Belarusian: {{t-|be|муфлон|xs=Belarusian}}
+* Belarusian: {{t-|be|муфлон|xs=Belarusian|sc=Cyrl}}
 * [[Breton]]: [[mouflon]]
-* Bulgarian: [[муфлон]] ([[muflon]])
+* Bulgarian: {{t|bg|муфлон|sc=Cyrl|tr=muflon}}
 * [[Catalan]]: [[mufló]]
 * Croatian: {{t-|hr|muflon}}
 * Czech: {{t-|cs|muflon}}
@@ -31,17 +31,16 @@
 * [[Friulian]]: [[muflon]]
 * [[Galician]]: [[muflón]]
 * German: [[Mufflon]] {{m}}
-* Greek: [[μουφλόν]]
+* Greek: {{t|el|μουφλόν|sc=Grek|tr=mouflón}}
 * Hungarian: {{t-|hu|muflon}}
 * Italian: {{t+|it|muflone|m}}
-* Japanese: [[ムフロン]] (mufuron)
+* Japanese: {{t|ja|ムフロン|sc=Jpan|tr=mufuron}}
 * [[Ladin]]: [[muflon]]
-* Latin: [[Ovis aries musimon]]
 * Latvian: [[muflons]]
 {{trans-mid}}
 * Lithuanian: {{t+|lt|muflonas|xs=Lithuanian}}
 * [[Lower Sorbian]]: [[muflon]]
-* [[Macedonian]]: [[муфлон]] ([[muflon]])
+* [[Macedonian]]: {{t|mk|муфлон|sc=Cyrl}}
 * Maltese: [[muflun]]
 * Navajo: {{tø|nv|Tó wónaanídę́ę́ʼ dibé ałchiní}}
 * Norwegian: {{t|no|mufflon}}
@@ -50,16 +49,18 @@
 * Portuguese: [[muflăo]]
 * Romanian: {{t+|ro|muflon}}
 * [[Romansch]]: [[muflon]]
-* Russian: [[муфлон]] ([[muflon]])
+* Russian: {{t|ru|муфлон|sc=Cyrl}}
 * [[Sami]]: [[muflon]], [[meahccesávza]]
-* [[Sardinian]]: [[mruvoni]], [[mugra]], [[muva]], [[murgone]]
-* Serbian: [[муфлон]] ([[muflon]])
+* [[Sardinian]]: {{t|sc|mruvoni}}, {{t|sc|mugra}}, {{t|sc|muva}}, {{t|sc|murgone}}
+* Serbo-Croatian:
+*: Cyrillic spelling: {{t|sh|муфлон|sc=Cyrl}}
+*: Roman spelling: {{t|sh|muflon}}
 * Slovak: [[muflón]]
 * Slovene: {{t+|sl|muflon}}
 * Spanish: [[muflón]] {{m}}
 * Swedish: {{t|sv|mufflon}}
 * Turkish: {{t+|tr|yaban koyunu}}, {{t+|tr|muflon}}
-* Ukrainian: [[муфлон]] ([[muflon]])
+* Ukrainian: {{t|uk|муфлон|sc=Cyrl|tr=muflon}}
 * [[Upper Sorbian]]: [[muflon]]
 * Welsh: [[mwfflon]]
 * [[West Frisian]]: [[moeflon]]
