/* Norwegian Bokmål */ <at#13192212>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -302,7 +302,7 @@ From {{etyl|sga|ga}} {{term|att|lang=sga}}.
 ==Norwegian Bokmål==
 
 ===Conjunction===
-{{infl|nb|conjugation}}
+{{infl|nb|conjunction}}
 
 # [[that#Conjunction|that]]
 
