/* Noun */ no plural <dacryohemorrhea#13202050>

--- a/en/d/dacryohemorrhea.746510.wikitext
+++ b/en/d/dacryohemorrhea.746510.wikitext
@@ -7,7 +7,7 @@ From Greek [[δακρυοαιμορρεειν]] (''dakryohaimorrheein'') to flow
 * {{IPA|/ˌdak´re-o-hem´o-re´ə/}}
 
 ===Noun===
-{{en-noun|dacryohemorrhea}}
+{{en-noun|-}}
 
 # {{symptom}} The discharge of tears mixed with blood; a hemorrhagic discharge from the lacrimal sac.
 # Bloody tears; bleeding from the tear ducts while crying; crying blood.
