plenty of examples for this usage <jarred#13204160>

--- a/en/j/jarred.720107.wikitext
+++ b/en/j/jarred.720107.wikitext
@@ -5,6 +5,12 @@
 
 # {{past of|[[jar]]}}
 
+===Adjective===
+{{en-adj|-}}
+
+# Contained in a [[jar]]
+#:"The '''jarred''' peppers should be firm enough to dice without falling apart under your knife."
+
 [[de:jarred]]
 [[fr:jarred]]
 [[mg:jarred]]
