/* Danish */ infl <at#13228331>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -187,18 +187,16 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 ==Danish==
 
 ===Conjunction===
-'''at'''
+{{infl|da|conjunction}}
 
 # [[that]]
 
 ===Particle===
-'''at'''
+{{infl|da|particle}}
 
-# A particle used to mark the following verb as an [[infinitive]].
-#: ''Det er menneskeligt '''at''' fejle.'' (''To err is human.'')
-
-[[Category:Danish conjunctions]]
-[[Category:Danish particles]]
+# [[to]] {{gloss|infinitive-marker}}
+#: ''Det er menneskeligt '''at''' fejle.''
+#::'''''To''' err is human.''
 
 ----
 
