--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -32,7 +32,7 @@
 * Japanese: {{t-|ja|四辺形|tr=shihenkei}}, (in common, uses {{t-|ja|四角形|tr=shikakukei}})
 * Polish: [[czworokąt]] {{m}}, [[czworobok]] {{m}}
 * Romanian: [[patrulater]], [[cadrilater]]
-* Russian: {{t+|ru|четырёхугольник|m}}
+* Russian: {{t+|ru|четырёхугольник|m|tr=četyrjoxugо́l'nik}}
 * Spanish: {{t+|es|cuadrilátero|m}}
 * Swedish: {{t+|sv|fyrhörning|c}}
 * [[Telugu]]: [[చతుర్భుజి]] (chaturbhuji)
