t+ru:[[четырёхсторонний]] t-balance ([[WT:EDIT|Assisted]]) <quadrilateral#13251654>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -49,11 +49,12 @@
 * German: {{t|de|vierseitig|n}}
 * Greek: {{t+|el|τετράπλευρος}}
 * Hebrew: {{t|he|מרובע|m|tr=merubá}}
-{{trans-mid}}
 * Hindi: [[चतुर्भुजीय]]
+{{trans-mid}}
 * Irish: [[ceathairshleasach]]
 * Italian: {{t+|it|quadrilatero}}
 * Japanese: [[四辺形]]の (shihenkei no)
+* Russian: {{t|ru|четырёхсторонний|tr=četyrjoxstorо́nnij|sc=Cyrl}}
 {{trans-bottom}}
 
 [[Category:Shapes]]
