/* Interjection */ <wah lau#13251806>

--- a/en/w/wah lau.720445.wikitext
+++ b/en/w/wah lau.720445.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+Said to be a derivative of the Hokkien phrase ''[[wah-lau-peh]]'' which literally means "my father!" From Hokkien [[我]][[老伯]] (POJ ''góa lāu-peh'') 
+
 ===Interjection===
 '''[[wah]] [[lau]]'''
 
