t+ltg:[[cyuka]] ([[WT:EDIT|Assisted]]) <pig#13271770>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -102,6 +102,7 @@
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
 * [[Ladin]]: [[porcel]]
+* [[Latgalian]]: {{tø|ltg|cyuka|f}}
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 {{trans-mid}}
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
