/* Translations */ ed el <quadrilateral#13279586>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -23,7 +23,7 @@
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}
 * German: {{t+|de|Viereck}}
-* Greek: {{t+|el|τετράπλευρο|n}}
+* Greek: {{t+|el|τετράγωνο|tr=tetrágono|n}}
 * Hebrew: {{t|he|מרובע|m|tr=merubá}}
 {{trans-mid}}
 * Hindi: [[चतुर्भुज]]
