--- a/en/m/moonlighter.720229.wikitext
+++ b/en/m/moonlighter.720229.wikitext
@@ -3,10 +3,14 @@
 ===Noun===
 {{en-noun}}
 
-# A person who [[moonlight]]s
+# A person who [[moonlight]]s.
 
 ====Translations====
-* Dutch: {{t|nl|zwartwerker}}
+{{trans-top|person who has a secondary job}}
+* Dutch: {{t|nl|zwartwerker|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 
 [[vi:moonlighter]]
 [[zh:moonlighter]]
