/* Translations */ adding Mandarin translation <marten#13330374>

--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -38,6 +38,8 @@
 * [[Breton]]: [[mart]]
 * Bulgarian: {{t-|bg|бялка|f|tr=bjalka}}
 * [[Catalan]]: {{t-|ca|marta|f}}
+* Chinese:
+*: Mandarin: {{t|zh|貂|tr=diāo|sc=Hani}}
 * Croatian: {{t+|hr|kuna|f}}
 * Czech: {{t+|cs|kuna|f}}
 * Danish: {{t|da|mår}}
@@ -56,6 +58,7 @@
 * Icelandic: {{t+|is|mörður}}
 * Irish: {{t+|ga|cat crainn|xs=Irish}}
 * Italian: {{t+|it|martora|f}}
+* {{trreq|Japanese}}
 * [[Ladin]]: [[meder]]
 * Latin: {{t-|la|martes|f}}
 {{trans-mid}}
