t+ro:[[promite]] t+ro:[[garanta]] ([[WT:EDIT|Assisted]]) <pledge#13331501>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * {{trreq|ms}}
 * Polish: {{t+|pl|obiecać}}
 * Portuguese: {{t+|pt|prometer}}
+* Romanian: {{t|ro|promite}}, {{t|ro|garanta}}
 * Russian: {{t+|ru|обещать}}, {{t+|ru|заверять}}, {{t+|ru|клясться}}
 * Serbo-Croatian: [[zaloga]], [[zavet]], [[zavjet]], [[obećanje]], [[prisega]]
 * {{trreq|sk}}
