nl-noun, attention|nl <Maneblusser#13333613>

--- a/en/m/Maneblusser.4388.wikitext
+++ b/en/m/Maneblusser.4388.wikitext
@@ -1,9 +1,10 @@
 ==Dutch==
 
 ===Etymology===
-From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire.  [http://www.trabel.com/mechelen-intro.htm]
+From ''[[maan]]'' (''[[moon]]'') + ''[[blusser]]'' (''[[extinguisher]]''), after an incident where the moon shining through fog was mistaken for a tower on fire. [http://www.trabel.com/mechelen-intro.htm]
 
-===Proper noun===
-'''Maneblusser''' (''plural:'' [[Maneblussers]])
+===Noun===
+{{nl-noun|g=m|pl=Maneblussers}}
 
 # {{context|humorous|Flemish|lang=nl}} An inhabitant of the city of [[Mechelen]], [[Belgium]].
+{{attention|nl|check caps, gender, inflection}}
