t+sv:[[konsumtion]] ([[WT:EDIT|Assisted]]) <consumption#13345073>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -38,6 +38,7 @@
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}
 * [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
 * Spanish: {{t-|es|consumir}}
+* Swedish: {{t|sv|konsumtion|c}}
 {{trans-bottom}}
 
 {{trans-top|the amount consumed}}
