--- a/en/r/reassessment.741528.wikitext
+++ b/en/r/reassessment.741528.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+{{prefix|re|assessment}}
 ===Noun===
 {{en-noun}}
 # The act of [[reassess]]ing; a second or subsequent [[assessment]].
