--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -8,7 +8,7 @@ From the prefix [[mega-]].
 * {{rhymes|ɛɡə}}
 
 ===Adjective===
-'''mega'''
+{{en-adj|-}}
 
 # {{informal}} Very large.
 # {{informal}} Great.
@@ -53,16 +53,15 @@ From the prefix [[mega-]].
 ----
 
 ==Faroese==
+
 ===Verb===
-'''mega'''
+{{infl|fo|verb}}
 
 # [[must]], [[may]]
 
 
 ====Conjugation====
 {{fo-conj-mega}}
-
-[[Category:Faroese verbs]]
 
 ----
 
