--- a/en/l/larmoyant.801636.wikitext
+++ b/en/l/larmoyant.801636.wikitext
@@ -12,12 +12,13 @@
 ----
 ==German==
 
+===Etymology===
+{{etyl|fr|de}}.
+
 ===Adjective===
 {{de-adj|-}}
 
 # [[tearful]], [[maudlin]]
-
-[[Category:de:French derivations]]
 
 [[de:larmoyant]]
 [[fr:larmoyant]]
