/* Derived terms */ <weight#13408129>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -35,14 +35,19 @@
 : ''Compare to'' [[mass]].
 
 ====Derived terms====
+{{rel-top3|Terms derived from ''weight'' (noun)}}
 * [[flyweight]]
 * [[heavyweight]]
 * [[lightweight]]
+{{rel-mid3}}
+* [[pull one's weight]]
 * [[topweight]]
 * [[weightful]], [[weightfully]], [[weightfulness]]
+{{rel-mid3}}
 * [[weightlifter]]
 * [[weightlifting]]
 * [[welterweight]]
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|force due to gravity}}
