t+grc:[[βύρσα]] ([[WT:EDIT|Assisted]]) <leather#13409033>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -21,7 +21,7 @@
 ====Translations====
 {{trans-top|material produced by tanning animal skin}}
 * Albanian: {{t-|sq|lëkurë|xs=Albanian}}
-* {{trreq|grc}}
+* Ancient Greek: {{tø|grc|βύρσα|f|tr=búrsa|sc=polytonic}}
 * Arabic: {{Arab|[[جلد]]}} (jild) {{m}}
 * Armenian: {{t-|hy|կաշի|tr=kaši}}
 * [[Avestan]]: {{tø|ae|carəman-}}
